--- a/weather-style.css
+++ b/weather-style.css
@@ -1,5 +1,5 @@
 #body{
-    background: #52a0ff;
+    background-color: #4693ff;
     font-family: 'Segoe UI', Verdana, Geneva, Tahoma, sans-serif;
     display: flex;
     align-items: center;
